tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -599,6 +599,15 @@
 </div>
 
 <div id="tab-thong-ke" class="tab-content">
+  <!-- Tổng quan tài chính -->
+  <div id="financialOverview"></div>
+  
+  <!-- Biểu đồ tổng quan -->
+  <div id="overviewChart"></div>
+  
+  <!-- Controls xuất dữ liệu -->
+  <div id="statisticsExportControls"></div>
+  
   <h3>Tổng hợp chi phí theo tháng</h3>
   <table id="monthlySummaryTable">
     <thead>
