tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -599,8 +599,11 @@
 </div>
 
 <div id="tab-thong-ke" class="tab-content">
-  <!-- Tổng quan tài chính -->
-  <div id="financialOverview"></div>
+  <!-- Dashboard Tài Chính Tổng Quan -->
+  <div id="financialDashboard"></div>
+  
+  <!-- Tổng quan tài chính cũ (backup) -->
+  <div id="financialOverview" style="display: none;"></div>
   
   <!-- Biểu đồ tổng quan -->
   <div id="overviewChart"></div>
