tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -1024,6 +1024,8 @@
       <tr>
         <th>Mã chi phí</th>
         <th>Ngày chi</th>
+        <th>Loại kế toán</th>
+        <th>Phân bổ</th>
         <th>Thông tin khoản chi</th>
         <th>Số tiền</th>
         <th>Ngày tái tục</th>
