--- a/main.html
+++ b/main.html
@@ -792,11 +792,11 @@
     </p>
 
     <!-- Ô tìm kiếm nhanh khoản chi -->
-    <div id="expenseQuickSearchWrapper" style="margin: 15px 0; position: relative; z-index: 100;">
-      <label style="color: #17a2b8; font-weight: 600; display: block; margin-bottom: 8px;">
+    <div id="expenseQuickSearchWrapper" style="margin: 15px 0; position: relative; z-index: 100; display: flex; flex-direction: column; align-items: center;">
+      <label style="color: #17a2b8; font-weight: 600; display: block; margin-bottom: 8px; text-align: center;">
         <i class="fas fa-search"></i> Tìm kiếm nhanh khoản chi:
       </label>
-      <div style="position: relative; max-width: 600px;">
+      <div style="position: relative; max-width: 600px; width: 100%;">
         <input type="text" 
                id="expenseQuickSearch" 
                placeholder="Nhập mô tả khoản chi để tìm kiếm (ví dụ: thuê văn phòng, mua phần mềm...)"
