--- a/main.html
+++ b/main.html
@@ -249,10 +249,11 @@
   margin: 0;
   width: 100%;
   min-height: 80px;
-  background: white;
+  background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
   padding: 0 20px;
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 3px solid #e3f2fd;
   flex-shrink: 0;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
 .header-container h1 {
@@ -260,10 +261,12 @@
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
-  font-size: 28px;
+  font-size: 32px;
   z-index: 1;
   white-space: nowrap;
-  color: #2c3e50;
+  color: #1565c0;
+  font-weight: 600;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 
 .totals-container {
@@ -354,6 +357,35 @@
     right: 10px;
     padding: 6px 12px;
     font-size: 12px;
+  }
+  
+  .form-grid {
+    grid-template-columns: 1fr;
+    gap: 8px;
+  }
+  
+  .form-grid div[style*="grid-column: span"] {
+    grid-column: span 1 !important;
+  }
+  
+  .form-section {
+    padding: 12px;
+    margin-bottom: 8px;
+  }
+  
+  .section-title {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+  
+  .button-row {
+    flex-direction: column;
+    gap: 8px;
+  }
+  
+  .button-row button {
+    width: 100%;
+    min-width: auto;
   }
   
   .tab-button[style*="display: none"] {
@@ -889,12 +921,12 @@
               Thông tin khách hàng
             </div>
             <div class="form-grid">
-              <div>
+              <div style="grid-column: span 2;">
                 <label>Email:</label>
                 <input type="email" id="customerEmail">
               </div>
 
-              <div>
+              <div style="grid-column: span 2;">
                 <label>Tên khách hàng:</label>
                 <div class="search-icon-container">
                   <input type="text" id="customerName">
@@ -941,7 +973,7 @@
               </div>
 
               <div>
-                <label>Số tháng đăng ký:</label>
+                <label>Số tháng:</label>
                 <input type="number" id="duration">
               </div>
 
@@ -966,8 +998,8 @@
                 <input type="number" id="deviceCount">
               </div>
 
-              <div>
-                <label>Doanh thu:</label>
+              <div style="grid-column: span 2;">
+                <label>Doanh thu (VNĐ):</label>
                 <input type="number" id="revenue">
               </div>
             </div>
@@ -1010,7 +1042,7 @@
                 </select>
               </div>
 
-              <div>
+              <div style="grid-column: span 2;">
                 <label>Ghi chú:</label>
                 <textarea id="note" rows="2"></textarea>
               </div>
