--- a/main.html
+++ b/main.html
@@ -395,14 +395,16 @@
   
   /* Toast notifications on mobile */
   #toastContainer {
-    top: 10px !important;
-    right: 10px !important;
-    left: 10px !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
   }
   
   .toast {
-    min-width: auto !important;
-    font-size: 13px;
+    min-width: 280px !important;
+    max-width: 90vw !important;
+    font-size: 14px;
+    padding: 16px 20px;
   }
   
   .tab-button[style*="display: none"] {
@@ -1561,98 +1563,98 @@
 <!-- Toast Notifications Container -->
 <div id="toastContainer" style="
   position: fixed;
-  top: 20px;
-  right: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 10000;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
   pointer-events: none;
 "></div>
 
 <style>
 .toast {
-  min-width: 300px;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  padding: 16px 20px;
+  min-width: 350px;
+  max-width: 500px;
+  background: rgba(0, 0, 0, 0.85);
+  color: white;
+  border-radius: 12px;
+  box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+  padding: 20px 24px;
   display: flex;
   align-items: center;
-  gap: 12px;
-  animation: slideIn 0.3s ease-out;
+  gap: 16px;
+  animation: fadeIn 0.3s ease-out;
   pointer-events: auto;
   cursor: pointer;
   transition: all 0.3s ease;
+  backdrop-filter: blur(10px);
 }
 
 .toast:hover {
-  transform: translateX(-5px);
-  box-shadow: 0 6px 16px rgba(0,0,0,0.2);
+  transform: scale(1.02);
+  box-shadow: 0 12px 40px rgba(0,0,0,0.4);
 }
 
 .toast.success {
-  border-left: 4px solid #4caf50;
+  background: rgba(76, 175, 80, 0.9);
 }
 
 .toast.error {
-  border-left: 4px solid #f44336;
+  background: rgba(244, 67, 54, 0.9);
 }
 
 .toast-icon {
-  font-size: 24px;
-}
-
-.toast.success .toast-icon {
-  color: #4caf50;
-}
-
-.toast.error .toast-icon {
-  color: #f44336;
+  font-size: 28px;
+  color: white;
 }
 
 .toast-message {
   flex: 1;
-  font-size: 14px;
-  color: #333;
+  font-size: 16px;
+  color: white;
   line-height: 1.4;
+  font-weight: 500;
+  text-align: center;
 }
 
 .toast-close {
-  font-size: 20px;
-  color: #999;
+  font-size: 24px;
+  color: rgba(255, 255, 255, 0.8);
   cursor: pointer;
   transition: color 0.2s;
 }
 
 .toast-close:hover {
-  color: #333;
+  color: white;
 }
 
-@keyframes slideIn {
+@keyframes fadeIn {
   from {
-    transform: translateX(100%);
     opacity: 0;
+    transform: scale(0.8);
   }
   to {
-    transform: translateX(0);
     opacity: 1;
+    transform: scale(1);
   }
 }
 
-@keyframes slideOut {
+@keyframes fadeOut {
   from {
-    transform: translateX(0);
     opacity: 1;
+    transform: scale(1);
   }
   to {
-    transform: translateX(100%);
     opacity: 0;
+    transform: scale(0.8);
   }
 }
 
 .toast.removing {
-  animation: slideOut 0.3s ease-in;
+  animation: fadeOut 0.3s ease-in;
 }
 </style>
 
